@@ -50,9 +50,9 @@ class LOADER():
         lf.write('# Specify specific cable if device database includes a cable ID\n')
         lf.write('my $setCable = \'setCable -p auto\';\n')
         lf.write('if (defined($dev_id)) {\n')
-        lf.write('  my $cable_uid = `leap-fpga-ctrl --device-id=${dev_id} --getconfig prog_cable_id`;\n')
-        lf.write('  chomp($cable_uid);\n')
-        lf.write('  $setCable = "setCable -p usb1 -esn $cable_uid" if ($cable_uid ne "");\n')
+        lf.write('  my $cable_cfg = `leap-fpga-ctrl --device-id=${dev_id} --getconfig prog_cable_id`;\n')
+        lf.write('  chomp($cable_cfg);\n')
+        lf.write('  $setCable = "setCable $cable_cfg" if ($cable_cfg ne "");\n')
         lf.write('}\n')
         lf.write('\n')
         lf.write('open (BATCH,">batch.opt");\n')
